grammar.js
    source_file: $ => seq(
      optional($.shebang_line),
      repeat($.file_annotation),
      optional($.package_header),
      repeat($.import_list),
      repeat(seq($._statement, $._semi))
    ),

    class_declaration: $ => prec.right(choice(
      seq(
        optional($.modifiers),
        choice("class", seq(optional("fun"), "interface")),
        field("name", alias($.simple_identifier, $.type_identifier)),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("constructor", $.primary_constructor)),
        optional(seq(":", field("delegation_specifiers", $._delegation_specifiers))),
        optional(field("type_constraints", $.type_constraints)),
        optional(field("body", $.class_body))
      ),
      seq(
        optional(field("modifiers", $.modifiers)),
        "enum", "class",
        field("name", alias($.simple_identifier, $.type_identifier)),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("constructor", $.primary_constructor)),
        optional(seq(":", field("delegation_specifiers", $._delegation_specifiers))),
        optional(field("type_constraints", $.type_constraints)),
        optional(field("body", $.enum_class_body))
      )
    )),

    primary_constructor: $ => seq(
      optional(seq(optional(field("modifiers", $.modifiers)), $._primary_constructor_keyword)),
      field("parameters", $._class_parameters)
    ),

    class_body: $ => seq("{", optional(field("members", $._class_member_declarations)), "}"),

    _class_parameters: $ => seq(
      "(",
      optional(sep1($.class_parameter, ",")),
      optional(","),
      ")"
    ),

    binding_pattern_kind: $ => choice("val", "var"),

    _delegation_specifiers: $ => prec.left(sep1(
      $.delegation_specifier,
      // $._annotated_delegation_specifier, // TODO: Annotations cause ambiguities with type modifiers
      ","
    )),

    delegation_specifier: $ => prec.right(choice(
      $.constructor_invocation,
      $.explicit_delegation,
      $.user_type,
      $.function_type,
      // The grammar doesn't explicitly define it, but parenthesized function
      // types seem to work!
      seq('(', $.function_type, ')'),
      seq("suspend", $.function_type)
    )),

    constructor_invocation: $ => seq(field("type", $.user_type), field("arguments", $.value_arguments)),

    explicit_delegation: $ => seq(
      field("delegated_type", choice(
        $.user_type,
        $.function_type
      )),
      "by",
      // Use a restricted expression that doesn't allow trailing lambda calls
      // to avoid ambiguity with class_body in object literals.
      // e.g., `object : Interface by delegate { }` - the `{` should be class_body, not a lambda.
      // If a trailing lambda delegate is truly needed, use parentheses:
      // `object : Interface by (factory { config }) { ... }`
      field("delegate_expression", $._expression_no_trailing_lambda)
    ),

    // Expression variant that doesn't allow call expressions with trailing lambdas.
    // This is used in explicit_delegation to prevent ambiguity with class_body.
    _expression_no_trailing_lambda: $ => choice(
      $._unary_expression,
      $._binary_expression,
      $._primary_expression_no_trailing_lambda
    ),

    type_parameters: $ => seq("<", sep1($.type_parameter, ","), optional(","), ">"),

    type_parameter: $ => seq(
      optional(field("modifiers", $.type_parameter_modifiers)),
      field("name", alias($.simple_identifier, $.type_identifier)),
      optional(seq(":", field("type", $._type)))
    ),

    type_constraints: $ => prec.right(seq("where", sep1(field("constraint", $.type_constraint), ","))),

    type_constraint: $ => seq(
      field("annotations", repeat($.annotation)),
      field("name", alias($.simple_identifier, $.type_identifier)),
      ":",
      field("type", $._type)
    ),

    // ==========
    // Class members
    // ==========

    _class_member_declarations: $ => repeat1(seq($._class_member_declaration, $._semi)),

    function_value_parameters: $ => seq(
      "(",
      optional(sep1($.function_value_parameter, ",")),
      optional(","),
      ")"
    ),

    function_value_parameter: $ => seq(
      field("modifiers", optional($.parameter_modifiers)),
      field("parameter", $.parameter),
      optional(seq("=", field("initializer", $._expression)))
    ),

    receiver_type: $ => seq(
      optional(field("modifiers", $.type_modifiers)),
      field("type", choice (
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
      ))
    ),

    function_declaration: $ => prec.right(seq( // TODO
      optional(field("modifiers", $.modifiers)),
      "fun",
      optional(field("type_parameters", $.type_parameters)),
      optional(seq(field("receiver", $.receiver_type), optional('.'))),
      field("name", $.simple_identifier),
      field("parameters", $.function_value_parameters),
      optional(seq(":", field("return_type", $._type))),
      optional(field("type_constraints", $.type_constraints)),
      optional(field("body", $.function_body))
    )),

    function_body: $ => choice($._block, seq("=", $._expression)),

    variable_declaration: $ => prec.left(PREC.VAR_DECL, seq(
      // repeat($.annotation), TODO
      field("name", $.simple_identifier),
      optional(seq(":", field("type", $._type)))
    )),

    // Entry in name-based (parenthesized) destructuring — supports optional val/var and renaming
    _name_based_destructuring_entry: $ => prec.left(PREC.VAR_DECL, seq(
      optional($.binding_pattern_kind),
      field("target_name", $.simple_identifier),
      optional(seq(":", field("type", $._type))),
      optional(seq("=", field("source_name", $.simple_identifier)))  // renaming: val localName = propertyName
    )),

    // Entry in positional (bracketed) destructuring — supports optional val/var, NO renaming
    _positional_destructuring_entry: $ => prec.left(PREC.VAR_DECL, seq(
      optional($.binding_pattern_kind),
      field("target_name", $.simple_identifier),
      optional(seq(":", field("type", $._type)))
    )),

    property_declaration: $ => prec.right(seq(
      field("modifiers", optional($.modifiers)),
      $.binding_pattern_kind,
      optional(field("type_parameters", $.type_parameters)),
      optional(seq(field("receiver", $.receiver_type), optional('.'))),
      field("variable", choice($.variable_declaration, $.multi_variable_declaration)),
      optional(field("type_constraints", $.type_constraints)),
      optional(choice(
        seq("=", field("initializer", $._expression)),
        field("delegate", $.property_delegate)
      )),
      optional(';'),
      optional(choice(
        seq(field("getter", $.getter), optional(field("setter", $.setter))),
        seq(field("setter", $.setter), optional(field("getter", $.getter))),
      ))
    )),

    getter: $ => prec.right(seq(
      optional(field("modifiers", $.modifiers)),
      "get",
      optional(seq(
        "(", ")",
        optional(seq(":", field("return_type", $._type))),
        field("body", $.function_body)
      ))
    )),

    parameter: $ => seq(field("name", $.simple_identifier), ":", field("type", $._type)),

    _type: $ => seq(
      optional(field("modifiers", $.type_modifiers)),
      field("type", choice(
        $.function_type,
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
        $.not_nullable_type
      ))
    ),

    _type_reference: $ => prec.left(1, choice(
      field("type", $.user_type),
      "dynamic"
    )),

    nullable_type: $ => seq(
      field("type", choice($._type_reference, $.parenthesized_type)),
      repeat1($.quest)
    ),

    quest: $ => "?",

    // TODO: Figure out a better solution than right associativity
    //       to prevent nested types from being recognized as
    //       unary expresions with navigation suffixes.

    user_type: $ => sep1($._simple_user_type, "."),

    _simple_user_type: $ => prec.right(PREC.SIMPLE_USER_TYPE, seq(
      field("name", alias($.simple_identifier, $.type_identifier)),
      optional(field("type_arguments", $.type_arguments))
    )),

    type_projection: $ => choice(
      seq(optional(field("modifiers", $.type_projection_modifiers)), field("type", $._type)),
      "*"
    ),

    statements: $ => seq(
      $._statement,
      repeat(seq($._semi, $._statement)),
      optional($._semi),
    ),

    _statement: $ => choice(
      $._declaration,
      seq(
        repeat(choice($.label, $.annotation)),
        choice(
          $.assignment,
          $._loop_statement,
          $._expression
        )
      )
    ),

    control_structure_body: $ => choice($._block, $._statement),

    _block: $ => prec(PREC.BLOCK, seq("{", optional($.statements), "}")),

    for_statement: $ => prec.right(seq(
      "for",
      "(",
      field("annotations", repeat($.annotation)),
      field("loop_var", choice($.variable_declaration, $.multi_variable_declaration)),
      "in",
      field("iterator", $._expression),
      ")",
      optional(field("body", $.control_structure_body))
    )),

    _semi: $ => $._automatic_semicolon,

    assignment: $ => choice(
      prec.left(PREC.ASSIGNMENT, seq(field("target", $.directly_assignable_expression), field("operator", $._assignment_and_operator), field("value", $._expression))),
      prec.left(PREC.ASSIGNMENT, seq(field("target", $.directly_assignable_expression), "=", field("value", $._expression))),
      // TODO
    ),

    // ==========
    // Expressions
    // ==========

    _expression: $ => choice(
      $._unary_expression,
      $._binary_expression,
      $._primary_expression
    ),

    // Unary expressions

    call_expression: $ => prec.left(PREC.POSTFIX, seq(field("callee", $._expression), field("suffix", $.call_suffix))),

    // Generic call expression: call with REQUIRED type_arguments.
    // prec.dynamic(1) tells GLR to prefer the generic-call interpretation
    // (f<T>(x)) over the comparison interpretation (f < T > (x)).
    // Separated from call_expression so the dynamic boost only applies
    // when type_arguments are actually parsed, not for all calls.
    indexing_expression: $ => prec.left(PREC.POSTFIX, seq(field("receiver", $._expression), field("suffix", $.indexing_suffix))),

    navigation_expression: $ => prec.left(PREC.POSTFIX, seq(field("receiver", $._expression), field("suffix", $.navigation_suffix))),

    prefix_expression: $ => choice(
      prec.right(PREC.PREFIX, seq(field("operator", $._prefix_unary_operator), field("expression", $._expression))),
      prec.right(seq(choice($.annotation, $.label), $._expression)),
    ),

    as_expression: $ => prec.left(PREC.AS, seq(field("expression", $._expression), $._as_operator, field("cast_type", $._type))),

    multiplicative_expression: $ => prec.left(PREC.MULTIPLICATIVE, seq(field("lhs", $._expression), field("operator", $._multiplicative_operator), field("rhs", $._expression))),

    range_expression: $ => prec.left(PREC.RANGE, seq(field("lhs", $._expression), field("operator", choice("..", "..<")), field("rhs", $._expression))),

    infix_expression: $ => prec.left(PREC.INFIX, seq(field("lhs", $._expression), field("operator", $.simple_identifier), field("rhs", $._expression))),

    elvis_expression: $ => prec.left(PREC.ELVIS, seq(field("lhs", $._expression), "?:", field("rhs", $._expression))),

    check_expression: $ => prec.left(PREC.CHECK, seq(field("lhs", $._expression), choice(
      seq(optional(field("not", "!")), field("operator", $._in_operator), field("rhs", $._expression)),
      seq(optional(field("not", "!")), field("operator", $._is_operator), field("rhs", $._type))))),

    comparison_expression: $ => prec.left(PREC.COMPARISON, seq(field("lhs", $._expression), field("operator", $._comparison_operator), field("rhs", $._expression))),

    equality_expression: $ => prec.left(PREC.EQUALITY, seq(field("lhs", $._expression), field("operator", $._equality_operator), field("rhs", $._expression))),

    conjunction_expression: $ => prec.left(PREC.CONJUNCTION, seq(field("lhs", $._expression), "&&", field("rhs", $._expression))),

    disjunction_expression: $ => prec.left(PREC.DISJUNCTION, seq(field("lhs", $._expression), "||", field("rhs", $._expression))),

    // Suffixes

    indexing_suffix: $ => seq("[", sep1($._expression, ","), optional(','), "]"),

    navigation_suffix: $ => seq(
      // this introduces ambiguities with 'less than' for comparisons
      optional(field("type_arguments", $.type_arguments)),
      field("operator", $._member_access_operator),
      field("target", choice(
        $.simple_identifier,
        $.parenthesized_expression,
        "class"
      )),
    ),

    call_suffix: $ => prec.left(seq(
      // this introduces ambiguities with 'less than' for comparisons
      optional(field("type_arguments", $.type_arguments)),
      choice(
        prec(PREC.ARGUMENTS, seq(optional(field("arguments", $.value_arguments)), field("annotated_lambda", $.annotated_lambda))),
        field("arguments", $.value_arguments)
      )
    )),

    // Call suffix with REQUIRED type_arguments (used by _generic_call_expression)
    annotated_lambda: $ => seq(
      field("annotations", repeat($.annotation)),
      optional(field("label", $.label)),
      field("lambda", $.lambda_literal)
    ),

    type_arguments: $ => seq("<", sep1($.type_projection, ","), optional(","), ">"),

    value_arguments: $ => seq(
      "(",
      optional(
        seq(
          sep1($.value_argument, ","),
          optional(","),
        )
      ),
      ")"
    ),

    value_argument: $ => seq(
      optional(field("annotations", $.annotation)),
      optional(seq(field("name", $.simple_identifier), "=")),
      optional("*"),
      field("value", $._expression)
    ),

    parenthesized_expression: $ => seq("(", $._expression, ")"),

    // https://kotlinlang.org/spec/syntax-and-grammar.html#grammar-rule-collectionLiteral
    string_literal: $ => seq(
      $._string_start,
      repeat(choice($.string_content, $._interpolation)),
      $._string_end,
    ),

    _interpolation: $ => choice(
      seq($._interpolation_expression_start, alias($._expression, $.interpolated_expression), "}"),
      seq($._interpolation_identifier_start, alias($.simple_identifier, $.interpolated_identifier)),
    ),

    lambda_literal: $ => prec(PREC.LAMBDA_LITERAL, seq(
      "{",
      optional(seq(optional(field("parameters", $.lambda_parameters)), "->")),
      optional(field("body", $.statements)),
      "}"
    )),

    multi_variable_declaration: $ => choice(
      seq(
        '(',
        sep1(alias($._name_based_destructuring_entry, $.variable_declaration), ','),
        optional(','),
        ')'
      ),
      seq(
        '[',
        sep1(alias($._positional_destructuring_entry, $.variable_declaration), ','),
        optional(','),
        ']'
      ),
    ),

    lambda_parameters: $ => seq(sep1($._lambda_parameter, ","), optional(",")),

    _lambda_parameter: $ => choice(
      $.variable_declaration,
      seq($.multi_variable_declaration, optional(seq(":", $._type)))
    ),

    object_literal: $ => choice(
      prec.dynamic(1, seq(
        optional("data"),
        "object",
        optional(seq(":", field("delegation_specifiers", $._delegation_specifiers))),
        field("body", $.class_body),
      )),
      seq(
        optional("data"),
        "object",
        optional(seq(":", field("delegation_specifiers", $._delegation_specifiers))),
      ),
    ),

    this_expression: $ => choice(
      "this",
      $.this_at
    ),

    super_expression: $ => prec.right(choice(
      "super",
      seq("super", "<", field("generic_type", $._type), ">"),
      $.super_at
    )),

    when_expression: $ => seq(
      "when",
      optional(field("subject", $.when_subject)),
      "{",
      field("entries", repeat($.when_entry)),
      "}"
    ),
