test/corpus/expressions.txt
================================================================================
Multiplication expression
================================================================================

45 * 3

--------------------------------------------------------------------------------

(source_file
  (multiplicative_expression
    (integer_literal)
    (integer_literal)))

================================================================================
Prefix expressions
================================================================================

!isLastField
!x
++x

--------------------------------------------------------------------------------

(source_file
  (prefix_expression
    (simple_identifier))
  (prefix_expression
    (simple_identifier))
  (prefix_expression
    (simple_identifier)))

================================================================================
Prefix expression with disjunction
================================================================================

!x || y

--------------------------------------------------------------------------------

(source_file
  (disjunction_expression
    (prefix_expression
      (simple_identifier))
    (simple_identifier)))

================================================================================
Safe Navigation
================================================================================

a?.bar()
a? .bar()
a? . bar()
a?
  .bar()
a ? . bar()

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (navigation_expression
      (simple_identifier)
      (navigation_suffix
        (simple_identifier)))
    (call_suffix
      (value_arguments)))
  (call_expression
    (navigation_expression
      (simple_identifier)
      (navigation_suffix
        (simple_identifier)))
    (call_suffix
      (value_arguments)))
  (call_expression
    (navigation_expression
      (simple_identifier)
      (navigation_suffix
        (simple_identifier)))
    (call_suffix
      (value_arguments)))
  (call_expression
    (navigation_expression
      (simple_identifier)
      (navigation_suffix
        (simple_identifier)))
    (call_suffix
      (value_arguments)))
  (call_expression
    (navigation_expression
      (simple_identifier)
      (navigation_suffix
        (simple_identifier)))
    (call_suffix
      (value_arguments))))

================================================================================
Function calls
================================================================================

print("Hello World!")
sum(1, 2)

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (simple_identifier)
    (call_suffix
      (value_arguments
        (value_argument
          (string_literal
            (string_content))))))
  (call_expression
    (simple_identifier)
    (call_suffix
      (value_arguments
        (value_argument
          (integer_literal))
        (value_argument
          (integer_literal))))))

================================================================================
Check expression
================================================================================

count in 1..45
day in 1..7

--------------------------------------------------------------------------------

(source_file
  (check_expression
    (simple_identifier)
    (range_expression
      (integer_literal)
      (integer_literal)))
  (check_expression
    (simple_identifier)
    (range_expression
      (integer_literal)
      (integer_literal))))

================================================================================
Range-until expression
================================================================================

for (i in 0..<10) {}
val r = 1..<n

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (variable_declaration
      (simple_identifier))
    (range_expression
      (integer_literal)
      (integer_literal))
    (control_structure_body))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (range_expression
      (integer_literal)
      (simple_identifier))))

================================================================================
When expression
================================================================================

val x = 1
val y = when(x){
        1 -> true
        2 -> false
        in 3..10 -> true
    }
val z = when(x) {
        1,2 -> 0
        3,4 -> 1
        5,  -> 2
}

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (integer_literal))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (when_expression
      (when_subject
        (simple_identifier))
      (when_entry
        (when_condition
          (integer_literal))
        (control_structure_body
          (boolean_literal)))
      (when_entry
        (when_condition
          (integer_literal))
        (control_structure_body
          (boolean_literal)))
      (when_entry
        (when_condition
          (range_test
            (range_expression
              (integer_literal)
              (integer_literal))))
        (control_structure_body
          (boolean_literal)))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (when_expression
      (when_subject
        (simple_identifier))
      (when_entry
        (when_condition
          (integer_literal))
        (when_condition
          (integer_literal))
        (control_structure_body
          (integer_literal)))
      (when_entry
        (when_condition
          (integer_literal))
        (when_condition
          (integer_literal))
        (control_structure_body
          (integer_literal)))
      (when_entry
        (when_condition
          (integer_literal))
        (control_structure_body
          (integer_literal))))))

================================================================================
When expression with prefix unary expressions
================================================================================

when {
  !x -> false
  !isLastField -> false
  isLastField && x -> false
}

--------------------------------------------------------------------------------

(source_file
  (when_expression
    (when_entry
      (when_condition
        (prefix_expression
          (simple_identifier)))
      (control_structure_body
        (boolean_literal)))
    (when_entry
      (when_condition
        (prefix_expression
          (simple_identifier)))
      (control_structure_body
        (boolean_literal)))
    (when_entry
      (when_condition
        (conjunction_expression
          (simple_identifier)
          (simple_identifier)))
      (control_structure_body
        (boolean_literal)))))

================================================================================
When expression with type arguments
================================================================================

when (this) {
    is DispatchedCoroutine<*> -> return null
    !is DispatchedCoroutine<*> -> return null
}

--------------------------------------------------------------------------------

(source_file
  (when_expression
    (when_subject
      (this_expression))
    (when_entry
      (when_condition
        (type_test
          (user_type
            (type_identifier)
            (type_arguments
              (type_projection)))))
      (control_structure_body
        (jump_expression
          (return_expression
            (null_literal)))))
    (when_entry
      (when_condition
        (type_test
          (user_type
            (type_identifier)
            (type_arguments
              (type_projection)))))
      (control_structure_body
        (jump_expression
          (return_expression
            (null_literal)))))))

================================================================================
When expression with dangling if-else
================================================================================

when (x) {
    is State.Canceled ->
      if(isTrue) {
        println(42)
      }
    else -> {}
}

--------------------------------------------------------------------------------

(source_file
  (when_expression
    (when_subject
      (simple_identifier))
    (when_entry
      (when_condition
        (type_test
          (user_type
            (type_identifier)
            (type_identifier))))
      (control_structure_body
        (if_expression
          (simple_identifier)
          (control_structure_body
            (statements
              (call_expression
                (simple_identifier)
                (call_suffix
                  (value_arguments
                    (value_argument
                      (integer_literal))))))))))
    (when_entry
      (control_structure_body))))

================================================================================
When with if-else and else branch
================================================================================

when (x) {
    1 -> if (a) b else c
    else -> d
}

--------------------------------------------------------------------------------

(source_file
  (when_expression
    (when_subject
      (simple_identifier))
    (when_entry
      (when_condition
        (integer_literal))
      (control_structure_body
        (if_expression
          (simple_identifier)
          (control_structure_body
            (simple_identifier))
          (control_structure_body
            (simple_identifier)))))
    (when_entry
      (control_structure_body
        (simple_identifier)))))

================================================================================
When with multiple if-no-else before else branch
================================================================================

when (x) {
    is A -> if (a) doA()
    is B -> if (b) doB()
    else -> doDefault()
}

--------------------------------------------------------------------------------

(source_file
  (when_expression
    (when_subject
      (simple_identifier))
    (when_entry
      (when_condition
        (type_test
          (user_type
            (type_identifier))))
      (control_structure_body
        (if_expression
          (simple_identifier)
          (control_structure_body
            (call_expression
              (simple_identifier)
              (call_suffix
                (value_arguments)))))))
    (when_entry
      (when_condition
        (type_test
          (user_type
            (type_identifier))))
      (control_structure_body
        (if_expression
          (simple_identifier)
          (control_structure_body
            (call_expression
              (simple_identifier)
              (call_suffix
                (value_arguments)))))))
    (when_entry
      (control_structure_body
        (call_expression
          (simple_identifier)
          (call_suffix
            (value_arguments)))))))

================================================================================
Expressions with Soft Keywords
================================================================================

overrides.find { override -> true }

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (navigation_expression
      (simple_identifier)
      (navigation_suffix
        (simple_identifier)))
    (call_suffix
      (annotated_lambda
        (lambda_literal
          (lambda_parameters
            (variable_declaration
              (simple_identifier)))
          (statements
            (boolean_literal)))))))

================================================================================
Value declaration with receiver type
================================================================================

val MyDate.s: String get() = "hello"

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    (receiver_type
      (user_type
        (type_identifier)))
    (variable_declaration
      (simple_identifier)
      (user_type
        (type_identifier)))
    (getter
      (function_body
        (string_literal
          (string_content))))))

================================================================================
Expect as an expression
================================================================================

val x = expect(1)

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (simple_identifier)
      (call_suffix
        (value_arguments
          (value_argument
            (integer_literal)))))))

================================================================================
Expect as a top-level expression
================================================================================

expect(1)

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (simple_identifier)
    (call_suffix
      (value_arguments
        (value_argument
          (integer_literal))))))

================================================================================
Expect as a platform modifier
================================================================================

expect fun randomUUID(): String

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifiers
      (platform_modifier))
    (simple_identifier)
    (function_value_parameters)
    (user_type
      (type_identifier))))

================================================================================
Less than for generics
================================================================================

foo<Int>(1,2)
foo<Int>(1)

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (simple_identifier)
    (call_suffix
      (type_arguments
        (type_projection
          (user_type
            (type_identifier))))
      (value_arguments
        (value_argument
          (integer_literal))
        (value_argument
          (integer_literal)))))
  (call_expression
    (simple_identifier)
    (call_suffix
      (type_arguments
        (type_projection
          (user_type
            (type_identifier))))
      (value_arguments
        (value_argument
          (integer_literal))))))

================================================================================
Less than for comparison
================================================================================

val x = a<b
val y = a>b
val z = a<b>c
// this is parsed as a generic, but could also be parsed as a comparison
val w = a<b>(c)
val a = a<2>(3)

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (comparison_expression
      (simple_identifier)
      (simple_identifier)))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (comparison_expression
      (simple_identifier)
      (simple_identifier)))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (comparison_expression
      (comparison_expression
        (simple_identifier)
        (simple_identifier))
      (simple_identifier)))
  (line_comment)
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (simple_identifier)
      (call_suffix
        (type_arguments
          (type_projection
            (user_type
              (type_identifier))))
        (value_arguments
          (value_argument
            (simple_identifier))))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (comparison_expression
      (comparison_expression
        (simple_identifier)
        (integer_literal))
      (parenthesized_expression
        (integer_literal)))))

================================================================================
Type arguments before navigation suffix
================================================================================

foo<*>::bar

--------------------------------------------------------------------------------

(source_file
  (navigation_expression
    (simple_identifier)
    (navigation_suffix
      (type_arguments
        (type_projection))
      (simple_identifier))))

================================================================================
Lambda Expressions
================================================================================

foo.forEach { (index, value) -> 2 }

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (navigation_expression
      (simple_identifier)
      (navigation_suffix
        (simple_identifier)))
    (call_suffix
      (annotated_lambda
        (lambda_literal
          (lambda_parameters
            (multi_variable_declaration
              (variable_declaration
                (simple_identifier))
              (variable_declaration
                (simple_identifier))))
          (statements
            (integer_literal)))))))

================================================================================
Lambda literals with multi variable declaration with types
================================================================================

val baz =
  { (foo, bar): Pair<Foo, List<Bar>?> -> (bar ?: listOf()) }

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (lambda_literal
      (lambda_parameters
        (multi_variable_declaration
          (variable_declaration
            (simple_identifier))
          (variable_declaration
            (simple_identifier)))
        (user_type
          (type_identifier)
          (type_arguments
            (type_projection
              (user_type
                (type_identifier)))
            (type_projection
              (nullable_type
                (user_type
                  (type_identifier)
                  (type_arguments
                    (type_projection
                      (user_type
                        (type_identifier)))))
                (quest))))))
      (statements
        (parenthesized_expression
          (elvis_expression
            (simple_identifier)
            (call_expression
              (simple_identifier)
              (call_suffix
                (value_arguments)))))))))

================================================================================
Lambda Expression with suspend
================================================================================

values.map { suspend { it().await() } }

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (navigation_expression
      (simple_identifier)
      (navigation_suffix
        (simple_identifier)))
    (call_suffix
      (annotated_lambda
        (lambda_literal
          (statements
            (call_expression
              (simple_identifier)
              (call_suffix
                (annotated_lambda
                  (lambda_literal
                    (statements
                      (call_expression
                        (navigation_expression
                          (call_expression
                            (simple_identifier)
                            (call_suffix
                              (value_arguments)))
                          (navigation_suffix
                            (simple_identifier)))
                        (call_suffix
                          (value_arguments))))))))))))))

================================================================================
Function call with trailing lambda
================================================================================

with(s) { length }

--------------------------------------------------------------------------------

(source_file
  (call_expression
    (simple_identifier)
    (call_suffix
      (value_arguments
        (value_argument
          (simple_identifier)))
      (annotated_lambda
        (lambda_literal
          (statements
            (simple_identifier)))))))

================================================================================
Multiple Statements on a Single Line
================================================================================

fun main() { val temp = b.y; b.y = b.z; b.z = temp }

when (dir) {
  1 -> { val temp = b.y; b.y = b.z; b.z = temp }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (simple_identifier)
    (function_value_parameters)
    (function_body
      (statements
        (property_declaration
          (binding_pattern_kind)
          (variable_declaration
            (simple_identifier))
          (navigation_expression
            (simple_identifier)
            (navigation_suffix
              (simple_identifier))))
        (assignment
          (directly_assignable_expression
            (simple_identifier)
            (navigation_suffix
              (simple_identifier)))
          (navigation_expression
            (simple_identifier)
            (navigation_suffix
              (simple_identifier))))
        (assignment
          (directly_assignable_expression
            (simple_identifier)
            (navigation_suffix
              (simple_identifier)))
          (simple_identifier)))))
  (when_expression
    (when_subject
      (simple_identifier))
    (when_entry
      (when_condition
        (integer_literal))
      (control_structure_body
        (statements
          (property_declaration
            (binding_pattern_kind)
            (variable_declaration
              (simple_identifier))
            (navigation_expression
              (simple_identifier)
              (navigation_suffix
                (simple_identifier))))
          (assignment
            (directly_assignable_expression
              (simple_identifier)
              (navigation_suffix
                (simple_identifier)))
            (navigation_expression
              (simple_identifier)
              (navigation_suffix
                (simple_identifier))))
          (assignment
            (directly_assignable_expression
              (simple_identifier)
              (navigation_suffix
                (simple_identifier)))
            (simple_identifier)))))))

================================================================================
Statements with Line Breaks
================================================================================

when {
  id != null -> x.nodes.fromId(id)
                        as Foo?
  else -> null
}

when {
  id != null -> x.nodes.fromId(id)
                        as? Foo
  else -> null
}

fun <T> copyWhenGreater(list: List<T>, threshold: T): List<String>
    where T : CharSequence,
          T : Comparable<T>

--------------------------------------------------------------------------------

(source_file
  (when_expression
    (when_entry
      (when_condition
        (equality_expression
          (simple_identifier)
          (null_literal)))
      (control_structure_body
        (as_expression
          (call_expression
            (navigation_expression
              (navigation_expression
                (simple_identifier)
                (navigation_suffix
                  (simple_identifier)))
              (navigation_suffix
                (simple_identifier)))
            (call_suffix
              (value_arguments
                (value_argument
                  (simple_identifier)))))
          (nullable_type
            (user_type
              (type_identifier))
            (quest)))))
    (when_entry
      (control_structure_body
        (null_literal))))
  (when_expression
    (when_entry
      (when_condition
        (equality_expression
          (simple_identifier)
          (null_literal)))
      (control_structure_body
        (as_expression
          (call_expression
            (navigation_expression
              (navigation_expression
                (simple_identifier)
                (navigation_suffix
                  (simple_identifier)))
              (navigation_suffix
                (simple_identifier)))
            (call_suffix
              (value_arguments
                (value_argument
                  (simple_identifier)))))
          (user_type
            (type_identifier)))))
    (when_entry
      (control_structure_body
        (null_literal))))
  (function_declaration
    (type_parameters
      (type_parameter
        (type_identifier)))
    (simple_identifier)
    (function_value_parameters
      (function_value_parameter
        (parameter
          (simple_identifier)
          (user_type
            (type_identifier)
            (type_arguments
              (type_projection
                (user_type
                  (type_identifier)))))))
      (function_value_parameter
        (parameter
          (simple_identifier)
          (user_type
            (type_identifier)))))
    (user_type
      (type_identifier)
      (type_arguments
        (type_projection
          (user_type
            (type_identifier)))))
    (type_constraints
      (type_constraint
        (type_identifier)
        (user_type
          (type_identifier)))
      (type_constraint
        (type_identifier)
        (user_type
          (type_identifier)
          (type_arguments
            (type_projection
              (user_type
                (type_identifier)))))))))

================================================================================
Comments in Strings
================================================================================

val comments = foo("//")
val comments = foo("hello //")
val comments = foo("// there")
val comments = foo("hello // there")
val comments = """
  // hey there's a

  /* comment or two here */
"""
val comments = """ // and here """

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (simple_identifier)
      (call_suffix
        (value_arguments
          (value_argument
            (string_literal
              (string_content)))))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (simple_identifier)
      (call_suffix
        (value_arguments
          (value_argument
            (string_literal
              (string_content)))))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (simple_identifier)
      (call_suffix
        (value_arguments
          (value_argument
            (string_literal
              (string_content)))))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (call_expression
      (simple_identifier)
      (call_suffix
        (value_arguments
          (value_argument
            (string_literal
              (string_content)))))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (string_literal
      (string_content)))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (string_literal
      (string_content))))

================================================================================
Qualified this/super expressions
================================================================================

class Square() : Rectangle(), Polygon {
    override fun draw() {
        this@Square.draw()
        super@Square.draw()
        super<Polygon>.draw()
        super<Rectangle>@Square.draw()
    }
}

--------------------------------------------------------------------------------
